# bevy-n-body-problem

./: .editorconfig  .gitignore  .rusty-hook.toml  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
_app/: version.json
_app/immutable/assets/: 0.CX4rYnPf.css  _layout.CH6LXTtt.css
_app/immutable/chunks/: disclose-version.BGeobuf6.js  disclose-version.Xdn7Rwn-.js  entry.Blyu6Cmt.js  entry.Bwm_OuXF.js  entry.CederjTR.js  entry.DDmWczmt.js  entry.DG-0-6yA.js  entry.DPuZdC5I.js  entry.DcjDbNU7.js  entry.DxdLFhtv.js  render.Du4KLe_d.js  runtime.Cg60GyTE.js  runtime.DuYAxQZy.js
_app/immutable/entry/: app.B4BDb_E_.js  app.BG37Xpmr.js  app.BRTDGldn.js  app.CUH0llJR.js  app.D3ZwHZ1T.js  app.DbW4P3jp.js  app.Qpbxpf8h.js  app.agUrBQ2W.js  start.B3Qp-403.js  start.BZNzR25e.js  start.BkqJ1wcJ.js  start.BzQ7dM_G.js  start.CRP7tYeH.js  start.CqqlomMG.js  start.D8FZ6ra9.js  start.DNEk1Uyi.js
_app/immutable/nodes/: 0.Ca0WONvO.js  0.Dr3JMsWq.js  1.0_-Nt2pz.js  1.BZd9mCG0.js  1.BZnjS5-h.js  1.BdXq3kQD.js  1.BviZr0NO.js  1.C8MFAYE6.js  1.CP6Wpom1.js  1.DjVFxQNU.js  2.COKPSy8E.js  2.Cm0onGWo.js  2.D1klF4zK.js  2.DBovNF5r.js  2.DWIExIvx.js  2.Dyd72wnF.js
simulation/: Cargo.toml
simulation/src/: camera.rs  constants.rs  main.rs  render_body_plugin.rs
simulation/src/body/: mod.rs
www/: package.json  pnpm-lock.yaml  tailwind.config.ts
www/src/: app.css
www/src/assets/simulation/: simulation.d.ts  (+2 more)
www/src/components/: Simulation.svelte
www/src/routes/: +layout.svelte  +page.svelte
