[workspace]
members = ["simulation"]
default-members = ["simulation"]
resolver = "2"

[workspace.dependencies]
bevy = "0.13.2"
bevy_rapier2d = "0.26.0"
iyes_perf_ui = "0.2.3"
rusty-hook = "0.11.2"
bevy_editor_pls = "0.8.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
